tests/NormalTests/paczka2/big_fuzzy/71733994.err
Error in line 6: A381 S856 24,3
Error in line 38: 4fzvYByShI S856 23,6
Error in line 42: JsqbYb S382 252,69
Error in line 41: JsqbYb S382 59,5
Error in line 46: 5yANaa S382 6,8
Error in line 50: CGE6qhLyne S856 13,0
Error in line 55: A381 S382 ¨,2
Error in line 52: rZqJMOWDtA1 A381 44,1
Error in line 62: 5yANaa A381 7,0
Error in line 65: A381 A381 74,4
Error in line 72: 3cHUwvGp A381 8,7
Error in line 71: A381 S446 46,5
Error in line 76: A381 S856 43,2
Error in line 77: A381 S446 0,7
Error in line 85: rZqJMOWDtA1 A381 79,79
Error in line 86: CGE6qhLyne A381 99,31
Error in line 80: A381 A381 37,5
Error in line 89: 5yANaa S856 316,2
Error in line 91: A381 S856 19,8
Error in line 81: CGE6qhLyne A381 91,8
Error in line 96: 3cHUwvGp A381 14,8
Error in line 101: A381 A381 69,6
Error in line 100: CGE6qhLyne S446 29,8
Error in line 113: CGE6qhLyne S856 78,2
Error in line 115: CGE6qhLyne S446 56,8
Error in line 119: 3cHUwvGp S382 54,4
Error in line 123: 3cHUwvGp A381 25,5
Error in line 126: 3cHUwvGp S382 48,1
Error in line 134: 3cHUwvGp S856 94,9
Error in line 144: A381 S382 95,4
Error in line 152: rZqJMOWDtA1 S446 79,9
Error in line 157: 5yANaa S382 117,49
Error in line 155: 3cHUwvGp S856 89,5
Error in line 161: 3cHUwvGp S382 76,8
Error in line 162: 3cHUwvGp S856 18,8
Error in line 165: rZqJMOWDtA1 S856 20,7
Error in line 169: rZqJMOWDtA1 A381 69,8
Error in line 170: rZqJMOWDtA1 S382 84,6
Error in line 172: rZqJMOWDtA1 A381 9,4
Error in line 190: 4fzvYByShI S382 74,12
Error in line 180: 3cHUwvGp S382 1,1
Error in line 192: 4fzvYByShI S382 187,7
Error in line 203: JsqbYb S446 56,6
Error in line 206: JsqbYb S382 10,3
Error in line 220: A381 S382 17,6
Error in line 232: 3cHUwvGp A381 73,5
Error in line 207: 4fzvYByShI A381 322,6
Error in line 237: CGE6qhLyne A381 28,93
Error in line 224: JsqbYb A381 20,3
Error in line 246: 4fzvYByShI S446 55,9
Error in line 239: JsqbYb S856 56,0
